fix restaurant name alignment in small screen mode

--- a/docs/sites/css/styles.css
+++ b/docs/sites/css/styles.css
@@ -245,7 +245,9 @@ i {
 
     #header {
         height: 142px;
+        align-items: flex-start;
     }
+
 
     /* Home Page */
     #main-content .showimg {
